--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
 MarkupSafe==1.1.1
-numpy==1.20.0
-scikit-learn==0.23.2
+numpy
+scikit-learn
 scipy==1.5.2
 sklearn==0.0
 threadpoolctl==2.1.0
